fixed layout issues on all screens. menu working.

--- a/style.css
+++ b/style.css
@@ -73,10 +73,6 @@ h2{
     padding: 2em 0;
 }
 
-.top{
-    display: none;
-}
-
 /* HEADER LAYOUT */
 
 .header{
@@ -85,24 +81,16 @@ h2{
 
 .header__content{
     display: flex;
-    grid-column: 2/3;
-    /* justify-content: space-between;
-    width: 100%;
-    margin: 0 auto;
-    position: relative;
-    background-color: tomato; */
-
+    grid-column: 1/-1;
+    box-shadow: 0px 3px 6px 1px rgba(0, 12, 34, 1);
 }
 
 /* LOGO */
 
 .logo-link{
-    /* margin-top: 2em; */
+    margin: 1em 2em;
     cursor: pointer;
     text-decoration: none;
-    /* z-index: 10; */
-    margin: 0;
-    padding: 0;
     position: absolute;
 }
 
@@ -129,8 +117,7 @@ h2{
     animation: logoReload 500ms ease-out;
 }
 
-
-/* NAV again */
+/* NAVIGATION */
 
 
 .header__nav{
@@ -139,24 +126,17 @@ h2{
     top: 0;
     right: 0;
     bottom: 0;
-    background-color: #303C55 ;
+    background-color:#172a45 ;
     left:100%;
     transform: translateX(0); 
-    transition: transform 500ms;
-    overflow: hidden;
+    transition: transform ease-in-out 500ms;
 
-    /* 
-    height: 0px;
     overflow: hidden;
-    transform: translateX(100%);
-    transition: transform ease-in-out 700ms;
-    z-index: 10; */
 }
 
  .nav-open{
     transform: translateX(-100%);
 } 
-
 
 .nav-list{
     display: flex;
@@ -168,7 +148,6 @@ h2{
     justify-content: space-around;
     flex-direction: column;
 }
-
 
 .nav-link{
     text-decoration: none;
@@ -204,7 +183,7 @@ h2{
     margin-left: auto;
     cursor: pointer;
     color:#ccd6f6;
-    padding: 0.7em 0;
+    padding: 1em 1em;
     font-size: 3rem;
 }
 
@@ -492,6 +471,45 @@ h2{
     .col:first-child{
         grid-column: 2/span 1;
     }
+
+    .open-button,
+    .close-button{
+        display: none;
+    }
+
+    .header__nav{
+        position: initial;
+        background-color: #0a192f;
+        margin-bottom: 2.4em;        
+    }
+
+    .nav-list{
+        flex-direction: row;
+        justify-content: flex-end;
+        padding-top: 3em;
+    }
+
+    .nav-item{
+        margin-right: 2em;
+    }
+
+    .nav-link{
+        font-size: inherit;
+    }
+
+    .logo-link{
+        z-index: 1000;
+    }
   
 }
 
+@media (min-width: 1100px){
+    .logo-link{
+        margin-left: 10em;
+    }
+
+    .nav-item:last-child{
+        margin-right: 9em;
+    }
+
+}
